--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header.ejs', { title: 'Phishtopia' , extraStyles: ["/styles/main.css"], // main styles for index
-    extraScripts: ["/index.js", "/res/js/canvas.js" ] }) %>
+<%- include('partials/header.ejs', { title: 'Phishtopia' , extraStyles: ["/styles/main.css"], extraScripts:
+    ["/index.js", "/res/js/canvas.js" ], bodyClass: '' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
