Fix Dropdown and logo z-axis

--- a/views/PlayInt.ejs
+++ b/views/PlayInt.ejs
@@ -115,4 +115,4 @@
 </div>
 
 <%- include('partials/footer', { extraScripts: ['/res/js/stars-bg.js', '/res/js/little-logo.js',
-    '/res/js/playint-spin.js', '/res/js/playint.js'] }) %>
+    '/res/js/playint-spin.js'] }) %>
