--- a/public/styles/playint.css
+++ b/public/styles/playint.css
@@ -272,5 +272,6 @@ body.playint #gearCanvas {
     width: 50px;
     height: 50px;
     pointer-events: none;
+    z-index: 1;
     background: transparent;
 }
