Fix Projects and Simon Pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,5 +1,6 @@
 
-<%- include('partials/header', { title: 'Projects' }) %>
+<%- include('partials/header', { title: 'Projects' , bodyClass: '' }) %>
+
     
   <!-- Main Content -->
   <main class="main-grid">
