--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs', { title: 'Phishtopia' , extraStyles: ["/styles/main.css"], extraScripts:
-    ["/index.js", "/res/js/canvas.js" ], bodyClass: '' }) %>
+    ["/res/js/canvas.js"], bodyClass: '' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
