--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -79,7 +79,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link <%= bodyClass === 'playint' ? 'active' : '' %>" href="/PlayInt">Echoes
+                        <a class="nav-link <%= bodyClass === 'playint' ? 'active' : '' %>" href="/PlayerInt">Echoes
                             PlayInt</a>
                     </li>
                 </ul>
