--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
             <h2>Eve Echoes Player Intelligence</h2>
             <p>Using publicly available killmails from the echoes.mobi api, this tool produces the likely location and
                 time of play for a chosen player.</p>
-            <a href="PlayInt" class="btn btn-outline-light button">Echoes PlayInt</a>
+            <a href="PlayerInt" class="btn btn-outline-light button">Echoes PlayerInt</a>
         </section>
     </main>
 
