--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,7 +14,7 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
-          <li><a href="PlayInt"><h3>Echoes PlayInt</h3></a></li>
+          <li><a href="PlayerInt"><h3>Echoes PlayInt</h3></a></li>
           <li><a href="INTM-Logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
           <li><a href="https://phishyone.github.io/Fullstack-Course/"><h3>App Brewery Web Dev Course Projects</h3></a></li>
