Add Join Button

--- a/views/PlayerInt.ejs
+++ b/views/PlayerInt.ejs
@@ -11,7 +11,11 @@
         </div>
         <h1 id="eve-title">Eve Echoes: INTM</h1>
     </div>
-    <h2>Player Intelligence</h2>
+    <div class="join-container">
+        <h2>Join International Team [INTM]: </h2>
+        <a href="https://discord.com/channels/1196004493255516230/1197120187489595482"><img src="/res/images/discord.svg" alt="Discord Logo" class="discord-logo"></a>
+    </div>
+    <h2>Player Intelligence Gatherer</h2>
 
     <!-- Search Box -->
     <div class="search-box">
