--- a/public/styles/playint.css
+++ b/public/styles/playint.css
@@ -265,6 +265,26 @@ body.playint .logo-bg {
     display: block;
 }
 
+body.playint .join-container {
+    display: flex;
+    gap: 15px;
+}
+
+body.playint .join-container h2 {
+    color: #f00b0bff;
+    align-self: center;
+}
+
+body.playint .discord-logo {
+    height: 35px;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+body.playint .discord-logo:hover {
+    transform: scale(1.1);
+}
+
 body.playint #gearCanvas {
     position: absolute;
     top: 0;
