--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,10 +5,10 @@
         <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
         <p><a href="/contact">Contact Me</a></p>
     </div>
-    <a href="/"><img src="/res/images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+    <!-- <a href="/"><img src="/res/images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
     <a href="/">
         <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
-    </a>
+    </a> -->
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
