--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,15 +3,15 @@
 /* Color Names */
 :root {
   --dark-text: #331b01;
-  --light-text: #ffb76a;
-  --dark-section-bg: #274744;
-  --light-section-bg: #d16e04;
+  --light-text: #f00b0bff; 
+  --dark-section-bg: #ffb76a;
+  --light-section-bg: #03a9f4;
   --blue-main-bg: #19c5df;
 }
 
 /* Background Styles */
 .gradient-background {
-  background: linear-gradient(300deg, var(--blue-main-bg), var(--light-section-bg), var(--dark-section-bg));
+  background: linear-gradient(300deg, var(--light-text), var(--light-section-bg), var(--dark-section-bg));
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
@@ -135,7 +135,7 @@ a:not(.btn):link {
 }
 
 a:not(.btn):visited {
-  color: var(--light-section-bg);
+  color: var(--light-text);
 }
 
 a:not(.btn):hover {
@@ -143,19 +143,19 @@ a:not(.btn):hover {
 }
 
 a:not(.btn):active {
-  color: var(--light-text);
+  color: var(--light-section-bg);
 }
 
 .just-in-section a:link,
 .projects-list-section a:link,
 .navbar a:link {
-  color: #0e11ccff !important;
+  color: var(--dark-text) !important;
 }
 
 .just-in-section a:visited,
 .projects-list-section a:visited,
 .navbar a:visited {
-  color: #19c4df !important;
+  color: var(--light-text) !important;
 }
 
 .just-in-section a:hover,
@@ -168,7 +168,7 @@ a:not(.btn):active {
 .just-in-section a:active,
 .projects-list-section a:active,
 .navbar a:active {
-  color: #e73407ff !important;
+  color: #2ac3c9ff !important;
 }
 
 .projects-list-section h2,
