--- a/views/PlayerInt.ejs
+++ b/views/PlayerInt.ejs
@@ -12,10 +12,15 @@
         <h1 id="eve-title">Eve Echoes: INTM</h1>
     </div>
     <div class="join-container">
-        <h2>Join International Team [INTM]: </h2>
+        <h2>Join International Team [INTM]:</h2>
         <a href="https://discord.com/channels/1196004493255516230/1197120187489595482"><img src="/res/images/discord.svg" alt="Discord Logo" class="discord-logo"></a>
     </div>
-    <h2>Player Intelligence Gatherer</h2>
+    <div class="join-container">
+        <h2>What is [INTM]?</h2>
+        <a href="https://www.youtube.com/watch?v=3JE9PedLWqE&list=PLPlRnK8RqmvoasFKFmFRS55O12O6PvD4Z&index=1"><img
+                src="/res/images/youtube.svg" alt="YouTube Logo" class="youtube-logo"></a>
+    </div>
+    <h2 id="pig-title">Player Intelligence Gatherer</h2>
 
     <!-- Search Box -->
     <div class="search-box">
