Add UTC Time & Fix Contact Page

--- a/views/PlayerInt.ejs
+++ b/views/PlayerInt.ejs
@@ -21,6 +21,7 @@
                 src="/res/images/youtube.svg" alt="YouTube Logo" class="youtube-logo"></a>
     </div>
     <h2 id="pig-title">Player Intelligence Gatherer</h2>
+    <p>Current UTC Time: <span id="utc-time"></span></p>
 
     <!-- Search Box -->
     <div class="search-box">
@@ -124,4 +125,4 @@
 </div>
 
 <%- include('partials/footer', { extraScripts: ['/res/js/stars-bg.js', '/res/js/little-logo.js',
-    '/res/js/playint-spin.js'] }) %>
+    '/res/js/playint-spin.js', '/res/js/utc-time.js'] }) %>
