--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,5 @@
 
-<%- include('partials/header', { title: 'Contact Me' }) %>
+<%- include('partials/header', { title: 'Contact Me', bodyClass: '' }) %>
 
 <main class="main-grid">
         <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
