--- a/views/PlayerInt.ejs
+++ b/views/PlayerInt.ejs
@@ -124,5 +124,4 @@
                                     <% } %>
 </div>
 
-<%- include('partials/footer', { extraScripts: ['/res/js/stars-bg.js', '/res/js/little-logo.js',
-    '/res/js/playint-spin.js', '/res/js/utc-time.js'] }) %>
+<%- include('partials/footer', { extraScripts: ['/res/js/little-logo.js', '/res/js/playint.js'] }) %>
